Adding basic dev dependencies

--- a/MailPolling/MailPolling/MailPolling.csproj
+++ b/MailPolling/MailPolling/MailPolling.csproj
@@ -6,6 +6,9 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\" />
+    <Folder Include="Client\" />
+    <Folder Include="Client\components\" />
+    <Folder Include="Client\components\app-root\" />
   </ItemGroup>
 
   <ItemGroup>
