--- a/MailPolling/MailPolling/package.json
+++ b/MailPolling/MailPolling/package.json
@@ -17,5 +17,11 @@
     "style-loader": "^0.21.0",
     "webpack": "^4.16.2",
     "webpack-cli": "^3.1.0"
+  },
+  "dependencies": {
+    "babel-regenerator-runtime": "^6.5.0",
+    "crossroads": "^0.12.2",
+    "hasher": "^1.2.0",
+    "knockout": "^3.4.2"
   }
 }
