With webpack, yay

--- a/MailPolling/MailPolling/package.json
+++ b/MailPolling/MailPolling/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "author": "Sebastian Gfeller",
   "license": "MIT",
-  "private": false,
+    "private": false,
+    "scripts": {
+	"build": "webpack"
+    },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
